shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 19.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2960
height: 1440
breadth: 480
length: 2740
groups: 6
buttons_group: 3
button_size: 40
button_track_margin: 0.2
safe_area:
  - 130
  - 20
  - 90
  - 25
f0: 141.00795453889558

