shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 2.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1366
height: 768
breadth: 256
length: 990
groups: 1
buttons_group: 3
button_size: 79
button_track_margin: 0.2
safe_area:
  - 208
  - 20
  - 168
  - 25
f0: 133.10131105437085

