shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 20.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 3840
height: 1600
breadth: 533.3333333333334
length: 3468
whitespace: 156
groups: 3
buttons_group: 2
button_size: 78
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 125.6121
sample_rate_hz: 96000
channels: 2

