shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 21.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1280
height: 720
breadth: 240
length: 1012
groups: 2
buttons_group: 2
button_size: 52
button_track_margin: 0.2
safe_area:
  - 154
  - 20
  - 114
  - 25
f0: 114.66763565482053

