shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 22.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1920
height: 1200
breadth: 400
length: 1748
whitespace: 56
groups: 2
buttons_group: 2
button_size: 28
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 120.23089
sample_rate_hz: 96000
channels: 2

