shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 23.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2560
height: 1440
breadth: 480
length: 2360
whitespace: 70
groups: 1
buttons_group: 5
button_size: 35
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 150.8244
sample_rate_hz: 96000
channels: 1

