shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 24.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1366
height: 768
breadth: 256
length: 1250
whitespace: 28
groups: 3
buttons_group: 3
button_size: 14
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 119.04943
sample_rate_hz: 96000
channels: 2

