shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 25.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2560
height: 1440
breadth: 480
length: 2116
groups: 2
buttons_group: 2
button_size: 96
button_track_margin: 0.2
safe_area:
  - 242
  - 20
  - 202
  - 25
f0: 133.21661558028964

