shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 28.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 3840
height: 2160
breadth: 720
length: 3472
groups: 1
buttons_group: 5
button_size: 77
button_track_margin: 0.2
safe_area:
  - 204
  - 20
  - 164
  - 25
f0: 120.94443168478472

