shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 29.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2560
height: 1600
breadth: 533.3333333333334
length: 2196
whitespace: 152
groups: 1
buttons_group: 3
button_size: 76
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 169.12836
sample_rate_hz: 96000
channels: 1

